# lasalle-webdev-slides

./: .gitignore  .marprc  README.md  package.json  pyproject.toml  requirements.txt
slides/: m1s02.git.ca.md  m1s02.git.es.md  part-1.md  python.m1.s01.intro.es.md  python.m1.s02.python.es.md  python.m1.s03.notebooks.md  python.m1.s04.datatypes.ipynb  python.m1.s05.strings.md  python.m2.s01.condicionals.md  python.m2.s02.bucles.md  python.m2.s03.sequences.md  python.m3.s01.funciones.md  python.m3.s02.identificadores.md  python.m3.s03.procesamiento.md  python.m4.s01.modulos.md  python.m4.s02.excepciones.md
themes/: la-salle.css
