
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "my-project"
version = "0.1.0"
description = "My awesome project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"
